@@ -1,3 +1,8 @@
+2014-01-31  Vladimir Makarov  <vmakarov@redhat.com>
+
+	PR bootstrap/59985
+	* gcc.target/arm/pr59985.C: New.
+
 2014-01-31  Jakub Jelinek  <jakub@redhat.com>
 
 	PR sanitizer/59410
