@@ -1,3 +1,9 @@
+2014-01-31  Vladimir Makarov  <vmakarov@redhat.com>
+
+	PR bootstrap/59985
+	* lra-constraints.c (process_alt_operands): Update reload_sum only
+	on the first pass.
+
 2014-01-31  Richard Henderson  <rth@redhat.com>
 
 	PR middle-end/60004
